--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.4",
-    "next-themes": "^0.4.6",
+    "next-themes": "0.2.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.3",
     "react": "^19.0.0",
