Align alembic.ini credentials with .env

--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -50,7 +50,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://user:changeme_in_production@db:5432/hr_platform_db
+sqlalchemy.url = postgresql://postgres:5533951@db:5432/abstract_hr
 
 
 [post_write_hooks]
