--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,6 +2,12 @@
 # Use a specific LTS version for stability
 FROM node:18-alpine
 
+# Declare build argument
+# ARG NEXT_PUBLIC_API_URL
+# Set environment variable for build process
+# ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_API_URL=http://109.73.198.72:8000 # Hardcoded API URL
+
 # Set the working directory in the container
 WORKDIR /app
 
